# forge-llm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: bench-pr.yml  bench.yml  ci.yml  docs.yml  e2e.yml  publish-python.yml
HomebrewFormula/: forgellm.rb
benchmarks/: HISTORY.md  run.sh
benchmarks/results/: 0.2.0.json  0.3.0-dev.json  0.3.0-dev3.json  0.3.0-dev4-multi-model.json  0.3.1-dev-final.json  0.3.1-dev.json  0.4.0.json  0.5.1.json
blog/: beating-llama-cpp.md  cpu-batched-prefill.md  mma-flash-and-decode.md
crates/forge-cli/: Cargo.toml
crates/forge-codegen-cpu/: Cargo.toml
crates/forge-codegen-cpu/src/: lib.rs
crates/forge-codegen-gpu/: Cargo.toml
crates/forge-codegen-gpu/src/: lib.rs
crates/forge-codegen-wasm/: Cargo.toml
crates/forge-codegen-wasm/src/: lib.rs
crates/forge-frontend/: Cargo.toml
crates/forge-optimizer/: Cargo.toml
crates/forge-optimizer/src/: lib.rs
crates/forge-runtime/: Cargo.toml
crates/forgellm-cli/: Cargo.toml
crates/forgellm-cli/src/: main.rs
crates/forgellm-codegen-cpu/: Cargo.toml
crates/forgellm-codegen-cpu/benches/: codegen.rs
crates/forgellm-codegen-cpu/src/: emit.rs  lib.rs  project.rs  speculative.rs
crates/forgellm-codegen-cpu/tests/: e2e_correctness.rs
crates/forgellm-codegen-gpu/: Cargo.toml
crates/forgellm-codegen-gpu/src/: lib.rs
crates/forgellm-codegen-metal/: Cargo.toml
crates/forgellm-codegen-metal/src/: lib.rs
crates/forgellm-codegen-wasm/: Cargo.toml
crates/forgellm-codegen-wasm/src/: lib.rs
crates/forgellm-frontend/: Cargo.toml
crates/forgellm-frontend/src/: config.rs  gguf.rs  graph_builder.rs  hub.rs  ir.rs  lib.rs  lora.rs  onnx_export.rs  safetensors.rs  safetensors_loader.rs  weight_loader.rs
crates/forgellm-optimizer/: Cargo.toml
crates/forgellm-optimizer/src/: fusion.rs  lib.rs  passes.rs
crates/forgellm-python/: Cargo.toml  build.rs  pyproject.toml
crates/forgellm-python/src/: lib.rs
crates/forgellm-runtime/: Cargo.toml
crates/forgellm-runtime/src/: chat.rs  interpreter.rs  kernels.rs  kv_cache.rs  lib.rs  sampling.rs  tokenizer.rs
docs/: architecture.md  book.toml  tutorial.md
docs/src/: SUMMARY.md  introduction.md
docs/src/architecture/: codegen.md  frontends.md  ir.md  optimizer.md  overview.md  runtime.md
docs/src/benchmarks/: results.md
docs/src/contributing/: development.md
docs/src/getting-started/: installation.md  models.md  quickstart.md
docs/src/guides/: aot-compilation.md
examples/: .gitignore  01-compile-cpu.sh  02-compile-metal.sh  03-run-interpreter.sh  04-api-server.sh  05-python-inference.py  07-custom-sampling.rs  README.md
examples/06-library-usage/: Cargo.toml
examples/06-library-usage/src/: main.rs
scripts/: compare_bench.py
