[workspace]
members = [
    "crates/forgellm-frontend",
    "crates/forgellm-optimizer",
    "crates/forgellm-codegen-cpu",
    "crates/forgellm-codegen-wasm",
    "crates/forgellm-codegen-gpu",
    "crates/forgellm-runtime",
    "crates/forgellm-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sauravpanda/forge-llm"
homepage = "https://forgellm.dev"

[workspace.dependencies]
# Internal crates
forgellm-frontend = { path = "crates/forgellm-frontend" }
forgellm-optimizer = { path = "crates/forgellm-optimizer" }
forgellm-codegen-cpu = { path = "crates/forgellm-codegen-cpu" }
forgellm-codegen-wasm = { path = "crates/forgellm-codegen-wasm" }
forgellm-codegen-gpu = { path = "crates/forgellm-codegen-gpu" }
forgellm-runtime = { path = "crates/forgellm-runtime" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
pretty_assertions = "1"
