[workspace]
members = [
    "crates/forgellm-frontend",
    "crates/forgellm-optimizer",
    "crates/forgellm-codegen-cpu",
    "crates/forgellm-codegen-wasm",
    "crates/forgellm-codegen-gpu",
    "crates/forgellm-codegen-metal",
    "crates/forgellm-runtime",
    "crates/forgellm-cli",
    "crates/forgellm-python",
]
resolver = "2"

[workspace.package]
version = "0.7.7"
edition = "2021"
license = "MIT"
repository = "https://github.com/sauravpanda/forge-llm"
homepage = "https://forgellm.dev"
keywords = ["llm", "inference", "compiler", "gguf", "aot"]
categories = ["science", "compilers"]
readme = "README.md"

[workspace.dependencies]
# Internal crates
forgellm-frontend = { version = "0.7.7", path = "crates/forgellm-frontend" }
forgellm-optimizer = { version = "0.7.7", path = "crates/forgellm-optimizer" }
forgellm-codegen-cpu = { version = "0.7.7", path = "crates/forgellm-codegen-cpu" }
forgellm-codegen-wasm = { version = "0.7.7", path = "crates/forgellm-codegen-wasm" }
forgellm-codegen-gpu = { version = "0.7.7", path = "crates/forgellm-codegen-gpu" }
forgellm-codegen-metal = { version = "0.7.7", path = "crates/forgellm-codegen-metal" }
forgellm-runtime = { version = "0.7.7", path = "crates/forgellm-runtime" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tokenizer
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }

# Memory mapping
memmap2 = "0.9"

# Testing
pretty_assertions = "1"
tempfile = "3"
