[package]
name = "forge-cli"
description = "CLI tool for the Forge ML compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-frontend = { workspace = true }
forge-optimizer = { workspace = true }
forge-codegen-cpu = { workspace = true }
forge-codegen-wasm = { workspace = true }
forge-codegen-gpu = { workspace = true }
forge-runtime = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
