[package]
name = "forge-codegen-cpu"
description = "CPU code generation (x86 AVX2/512, ARM NEON) for Forge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-frontend = { workspace = true }
forge-optimizer = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
