[package]
name = "forge-codegen-gpu"
description = "GPU code generation via wgpu/WGSL for Forge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-frontend = { workspace = true }
forge-optimizer = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
