[package]
name = "forge-runtime"
description = "Minimal runtime for Forge (KV cache, sampling, tokenizer, API server)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-frontend = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
