[package]
name = "forgellm-cli"
description = "CLI tool for the ForgeLLM compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forgellm-frontend = { workspace = true }
forgellm-optimizer = { workspace = true }
forgellm-codegen-cpu = { workspace = true }
forgellm-codegen-wasm = { workspace = true }
forgellm-codegen-gpu = { workspace = true }
forgellm-runtime = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
