[package]
name = "forgellm-codegen-cpu"
description = "CPU code generation (x86 AVX2/512, ARM NEON) for ForgeLLM"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
forgellm-frontend = { workspace = true }
forgellm-optimizer = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
syn = { version = "2", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "codegen"
harness = false
