[package]
name = "forgellm-codegen-gpu"
description = "GPU code generation via wgpu/WGSL for ForgeLLM"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forgellm-frontend = { workspace = true }
forgellm-optimizer = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
