[package]
name = "forgellm-codegen-metal"
description = "Metal GPU code generation for Apple Silicon inference in ForgeLLM"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
forgellm-frontend = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[features]
default = []

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
