[package]
name = "forgellm-codegen-wasm"
description = "WASM + WebGPU code generation for ForgeLLM"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
forgellm-frontend = { workspace = true }
forgellm-optimizer = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
