[package]
name = "forgellm-frontend"
description = "Model parsing (GGUF, SafeTensors) and IR construction for ForgeLLM"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
