[package]
name = "forgellm-optimizer"
description = "Graph-level optimizations for ForgeLLM (fusion, layout, quantization, memory planning)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forgellm-frontend = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
