[package]
name = "forgellm-optimizer"
description = "Graph-level optimizations for ForgeLLM (fusion, layout, quantization, memory planning)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
forgellm-frontend = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
