[package]
name = "forgellm-runtime"
description = "Minimal runtime for ForgeLLM (KV cache, sampling, tokenizer, API server)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forgellm-frontend = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
