[package]
name = "forgellm-runtime"
description = "Minimal runtime for ForgeLLM (KV cache, sampling, tokenizer, API server)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
forgellm-frontend = { workspace = true }
tokenizers = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
